--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -20,6 +20,11 @@ $c-primary:					#ff5450;
 $c-primary-darker:			darken($c-primary, 15%);
 $c-primary-lightest:		lighten($c-primary, 15%);
 
+$c-facebook:         		#3b5998;
+$c-twitter:          		#55acee;
+$c-youtube:          		#cd201f;
+$c-instagram:				#833ab4;
+
 
 // Typography
 // -----------------------------------------------------------------------------
