--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,7 +11,7 @@
 								$LAYOUT
 -----------------------------------------------------------------------------*/
 
-@import 'layout/nav';
+@import 'layout/header';
 @import 'layout/cover';
 @import 'layout/main-section';
 @import 'layout/features';
