--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -13,22 +13,52 @@
 
 	.nav-logo {
 		position: absolute;
-		top: 20px;
+		top: 22.5px;
 		left: 20px;
 		height: 55px;
 	}
 
-	ul {
+	.nav {
 		padding: $h-nav 0 0;
 		text-align: center;
 
+		@include media(lg) {
+			display: flex;
+			justify-content: flex-end;
+			padding: 0 20px 0 0;
+		}
+
 		li:hover {
-			background: $c-white-darker;
+			background-color: $c-white-darker;
+
+			@include media(lg) {
+				background-color: transparent;
+			}
 		}
 
 		a {
 			display: inline-block;
 			padding: 1.25em;
+			color: $c-gray-darker;
+
+			@include media(lg) {
+				display: inline;
+				margin-right: 1.25em;
+				padding: 0;
+				line-height: 100px;
+
+				&:hover {
+					border-bottom: .15em solid $c-primary;
+					color: $c-gray-darker;
+				}
+
+				&:focus,
+				&:active {
+					border-bottom: .15em solid $c-primary;
+					color: $c-black;
+				}
+
+			}
 		}
 	}
 
@@ -39,6 +69,10 @@
 		width: 60px;
 		height: 60px;
 		transition-duration: .25s;
+
+		@include media(lg) {
+			display: none;
+		}
 
 		.icon-menu {
 			position: absolute;
