--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -39,7 +39,7 @@ $ff-header:       		('Montserrat', sans-serif);
 $fw-header:				$fw-bold;
 
 // Base Fonts
-$ff-base:         		('Open Sans', sans-serif);
+$ff-base:         		('PT Sans', sans-serif);
 $fw-base:				$fw-regular;
 $fz-base:				1rem;
 $lh-base:				1.4;
