--- a/css/style.css
+++ b/css/style.css
@@ -388,7 +388,7 @@ html {
 body {
   margin: 0;
   color: #909090;
-  font-family: "Open Sans", sans-serif;
+  font-family: "PT Sans", sans-serif;
   font-size: inherit;
   line-height: 1.5; }
 
@@ -3040,56 +3040,70 @@ textarea {
       border: 2px solid #ff9f9d;
       background-color: #ff9f9d; }
 
-.features {
-  width: 90%;
-  max-width: none;
-  margin-left: auto;
-  margin-right: auto;
+.services {
   padding: 6em 0;
   text-align: center; }
+  .services .section-title {
+    position: relative;
+    color: #1c1c1b;
+    letter-spacing: 11px;
+    text-transform: uppercase; }
+    .services .section-title::before {
+      position: absolute;
+      bottom: -20px;
+      left: 49.4%;
+      width: 79px;
+      height: 3px;
+      transform: translateX(-50%);
+      background: #ff5450;
+      content: ''; }
+  .services .flexbox-wrapper {
+    width: 90%;
+    max-width: none;
+    margin-left: auto;
+    margin-right: auto; }
+    @media (min-width: 48em) {
+      .services .flexbox-wrapper {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        max-width: 64rem;
+        margin-top: 2em; } }
+
+.service {
+  margin-top: 4em; }
   @media (min-width: 48em) {
-    .features {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      max-width: 64rem; } }
-
-@media (min-width: 48em) {
-  .feature {
-    width: 30%;
-    padding: 0 1em; } }
-
-.feature .icon-container {
-  display: inline-block;
-  width: 3.5rem;
-  height: 3.5rem;
-  border-radius: 50%;
-  background-color: #ff5450;
-  text-align: center; }
-  .feature .icon-container span {
-    color: #fff;
-    font-size: 1.5em;
-    line-height: 3.5rem; }
-
-.feature .title {
-  font-size: 1em; }
-
-.feature .text {
-  font-size: .875em;
-  font-weight: 400; }
-
-.feature .btn {
-  display: inline-block;
-  margin: 1em 0 3em;
-  padding: .75em 1.5em;
-  transition: all .3s ease-in-out;
-  border: 2px solid #ff5450;
-  font-size: .75em;
-  font-weight: 600;
-  text-transform: uppercase; }
-  .feature .btn:hover {
+    .service {
+      width: 30%;
+      padding: 0 1em; } }
+  .service .icon-container {
+    display: inline-block;
+    width: 3.5rem;
+    height: 3.5rem;
+    border-radius: 50%;
     background-color: #ff5450;
-    color: #fff; }
+    text-align: center; }
+    .service .icon-container span {
+      color: #fff;
+      font-size: 1.5em;
+      line-height: 3.5rem; }
+  .service .title {
+    font-size: 1em; }
+  .service .text {
+    font-size: .875em;
+    font-weight: 400; }
+  .service .btn {
+    display: inline-block;
+    margin: 1em 0 0;
+    padding: .75em 1.5em;
+    transition: all .3s ease-in-out;
+    border: 2px solid #ff5450;
+    font-size: .75em;
+    font-weight: 600;
+    text-transform: uppercase; }
+    .service .btn:hover {
+      background-color: #ff5450;
+      color: #fff; }
 
 .partners {
   padding: 6em 0;
