--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -19,6 +19,11 @@
 
 	.footer-logo {
 		height: $h-social-icon;
+		display: none;
+
+		@include media(md) {
+			display: block;
+		}
 	}
 
 	.text {
