--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,4 +17,5 @@
 @import 'layout/features';
 @import 'layout/partners';
 @import 'layout/trainers';
+@import 'layout/contact';
 @import 'layout/footer';
